# obsidian-slack

./: .gitignore  Cargo.toml  dprint.json  main.ts  manifest.json  package-lock.json  styles.css
js/: index.ts  jest.config.js  localStorageSettings.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  types.ts  webpack.config.js
js/__mocks__/: obsidian.ts
js/src/: index.ts  localStorageSettings.ts  utils.ts
js/src/tests/: utils.test.ts
rust/: Cargo.toml  Cargo.toml.d.ts
rust/obsidian-slack/: LICENSE_MIT
rust/src/: channels.rs  components.rs  errors.rs  lib.rs  messages.rs  response.rs  slack_http_client.rs  slack_url.rs  state_machine.rs  team.rs  users.rs  utils.rs
rust/tests/: wasm.rs
src/: lib.rs  obsidian.rs
