[package]
name = "obsidian-slack"
version = "0.1.0"
authors = ["cartwmic <cartwmic@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
thiserror = "1.0"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4"
derive_builder = "0.12"
js-sys = "0.3"
futures = "0.3"
do-notation = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
url = "2.3"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
tuple-conv = "1.0"
strum = "0.24"
strum_macros = "0.24"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
